<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    
    <item
        android:id="@+id/action_show_history"
        android:orderInCategory="100"
        android:title="@string/action_show_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="101"
        android:title="@string/action_clear_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="102"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>